--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
-  <package id="System.Data.SQLite.Core" version="1.0.106.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.115.0" targetFramework="net461" />
   <package id="YamlDotNet.Signed" version="4.2.3" targetFramework="net452" />
 </packages>
