--- a/test-project/packages.config
+++ b/test-project/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.115.0" targetFramework="net461" />
 </packages>
