pao archive update

--- a/App.config
+++ b/App.config
@@ -21,11 +21,12 @@
         <value>GLB_PMIS</value>
       </setting>
       <setting name="pmis_auth_key" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="register_discipline" serializeAs="Xml">
         <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <string>공통</string>
             <string>건축</string>
             <string>기계</string>
@@ -41,7 +42,8 @@
       </setting>
       <setting name="register_status" serializeAs="Xml">
         <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <string>승인용</string>
             <string>공사용</string>
             <string>최종용</string>
@@ -51,7 +53,8 @@
       </setting>
       <setting name="register_type" serializeAs="Xml">
         <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <string>4,1. MAIN PAGE,17808,17804</string>
             <string>4,1. 계약관리,17776,17587</string>
             <string>4,1. 공정현황,17771,17589</string>
@@ -369,7 +372,8 @@
       </setting>
       <setting name="archive_types" serializeAs="Xml">
         <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <string>Workflow</string>
             <string>Picture</string>
             <string>Issue</string>
@@ -380,7 +384,7 @@
         </value>
       </setting>
       <setting name="current_profile" serializeAs="String">
-        <value>default</value>
+        <value>펄어비스 사옥 신축공사</value>
       </setting>
     </pmis.Properties.Settings>
     <archive2.Properties.Settings>
