--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -364,7 +364,7 @@
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="current_profile" Type="System.String" Scope="User">
-      <Value Profile="(Default)">default</Value>
+      <Value Profile="(Default)">펄어비스 사옥 신축공사</Value>
     </Setting>
   </Settings>
 </SettingsFile>
